--- a/web/settings/navbar.html
+++ b/web/settings/navbar.html
@@ -76,7 +76,9 @@
 						<a class="dropdown-item" id="navNetworkSettings" href="./settings/network.php">Netzwerk-Einstellungen</a>
 					</div>
 				</li>
-
+				<li class "nav-item">
+					<a class="nav-link" href="./logout.html" id="navbarLogout">Abmelden</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
