--- a/web/settings/navbar.html
+++ b/web/settings/navbar.html
@@ -17,7 +17,7 @@
 					<div class="dropdown-menu">
 						<a class="dropdown-item" id="navAllgemein" href="./settings/settings.php">Allgemein</a>
 						<a class="dropdown-item" id="navSmartHome" href="./settings/smarthome.php">Smart Home</a>
-						<a class="dropdown-item" id="navSmartHomeBeta" href="./settings/smarthomeconfig.php">Smart Home 2.0</a>
+						<a class="dropdown-item" id="navSmartHome2" href="./settings/smarthomeconfig.php">Smart Home 2.0</a>
 						<a class="dropdown-item" id="navOpenwbCloud" href="./settings/cloudconfig.php">openWB Cloud</a>
 						<a class="dropdown-item" id="navMqttBruecke" href="./settings/mqtt.php">MQTT-Brücke</a>
 						<a class="dropdown-item" id="navAutolock" href="./settings/autoLock.php">Auto-Lock</a>
