fix logout directory structure

--- a/web/settings/navbar.html
+++ b/web/settings/navbar.html
@@ -77,7 +77,7 @@
 					</div>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="./logout.html" id="navbarLogout">Abmelden</a>
+					<a class="nav-link" href="./web/logout.html" id="navbarLogout">Abmelden</a>
 				</li>
 			</ul>
 		</div>
