--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -220,6 +220,8 @@
 							<h3 id="energyheading">Energie heute</h3>
 						</div>
 						<div class="col-4 px-0" style="text-align: right;">
+							<button class="btn btn-outline-secondary btn-sm " id="calendarButton"><span
+								class="fa fa-calendar-alt px-0"></span></button>
 							<button class="btn btn-outline-secondary btn-sm " id="energyLeftButton"><span
 									class="fa fa-chevron-circle-left px-0"></span></button>
 							<button class="btn btn-outline-secondary btn-sm " id="energyRightButton"><span
@@ -1118,7 +1120,7 @@
 			window.document.addEventListener(visibilityChange, () => {
 				if (!document[hidden]) {
 					// once page is unhidden... reload graph completety
-					if (this.showLiveGraph) {
+					if (wbdata.graphMode == 'live') {
 						powerGraph.deactivateDay();
 							powerGraph.activateLive();
 					} else {
