minor theme layout changes

--- a/web/themes/Gauges/theme.html
+++ b/web/themes/Gauges/theme.html
@@ -1639,6 +1639,8 @@
 					labelsValueBold: true,
 					labelsValueItalic: true,
 					labelsValueSize: 17,
+					titleBottomPos: 0.61,
+					titleBottomBold: true,
 					adjustable: false,
 					textAccessible: false,
 					colorsRanges: [[0, 1000, 'green', 3]],
