Wiki zur Navbar hinzugefügt

--- a/web/themes/navbar.html
+++ b/web/themes/navbar.html
@@ -35,6 +35,10 @@
 					<a class="nav-link" href="settings/settings.php">Einstellungen</a>
 				</li>
 
+				<li class="nav-item">
+					<a class="nav-link" href="https://github.com/snaptec/openWB/wiki" target="_blank" >Wiki</a>
+				</li>
+
 			</ul>
 		</div>
 	</nav>
