fix: soc limit for cp2 in pvconfig

--- a/web/settings/pvconfig.html
+++ b/web/settings/pvconfig.html
@@ -345,10 +345,10 @@
 								<div class="col">
 									<div class="btn-group btn-block btn-group-toggle" id="socLimitationLp2" name="socLimitation" data-toggle="buttons" data-default="0" data-topicprefix="openWB/config/get/pv/"  data-topicsubgroup="lp/2/">
 										<label class="btn btn-outline-info">
-											<input type="radio" name="socLimitationLp2" id="socLimitationLp2Off" data-option="0">ausgeschaltet
+											<input type="radio" name="socLimitationLp2" id="socLimitationLp2Off" data-option="0" value="0">ausgeschaltet
 										</label>
 										<label class="btn btn-outline-info">
-											<input type="radio" name="socLimitationLp2" id="socLimitationLp2On" data-option="1">eingeschaltet
+											<input type="radio" name="socLimitationLp2" id="socLimitationLp2On" data-option="1" value="1">eingeschaltet
 										</label>
 									</div>
 								</div>
