--- a/web/settings/pvconfig.html
+++ b/web/settings/pvconfig.html
@@ -236,7 +236,7 @@
 								<label for="nurpv70dynw" class="col-md-4 col-form-label">70%-Regelpunkt</label>
 								<div class="col">
 									<input id="nurpv70dynw" class="form-control naturalNumber" type="number" required min="2000" max="50000" value="2000" data-default="2000" data-topicprefix="openWB/config/get/pv/">
-									<span class="form-text small">Parameter in Watt [W] für den 70%-Regelpunkt im Modus PV-Laden. Dieser Parameter ist nur wirksam bei der Einstellung "70%-Regelung eingeschaltet". Der hier eingetragene Wert sollte zur optimalen Eigenverbrauchssteuerung 70 % der installierten kWp betragen.</span>
+									<span class="form-text small">Parameter in Watt [W] für den 70%-Regelpunkt im Modus PV-Laden. Dieser Parameter ist nur wirksam bei der Einstellung "70%-Regelung eingeschaltet". Der hier eingetragene Wert sollte zur optimalen Eigenverbrauchssteuerung 70 % der installierten kWp betragen. Die Nutzung dieser Option ergibt nur Sinn wenn ein Wechselrichter und Smartmeter verbaut ist welches eine dynamische 70% Abriegelung bietet.</span>
 								</div>
 							</div>
 						</div>
