--- a/web/themes/EvenDarker/theme.html
+++ b/web/themes/EvenDarker/theme.html
@@ -176,12 +176,12 @@
 			</div>
 		</div>
 
-		<div id="verbraucher" class="row justify-content-center regularTextSize font-weight-bold text-center openwb-devices hide">
-			<div id="verbraucher1" class="col-sm px-1 hide">
+		<div id="verbraucher" class="row justify-content-center regularTextSize font-weight-bold text-center hide">
+			<div id="verbraucher1" class="col-sm px-1 openwb-device-1 hide">
 				<span class="smallTextSize"><span id="verbraucher1name">Verbraucher 1</span>: <span id="verbraucher1leistung">lade Daten</span></span><span class="verySmallTextSize" id="verbraucher1dailyyield"></span>
 			</div>
-			<div id="verbraucher2" class="col-sm px-1 hide">
-				<span class="smallTextSize"><span id="verbraucher2name">Verbraucher 1</span>: <span id="verbraucher2leistung">lade Daten</span></span><span class="verySmallTextSize" id="verbraucher2dailyyield"></span>
+			<div id="verbraucher2" class="col-sm px-1 openwb-device-2 hide">
+				<span class="smallTextSize"><span id="verbraucher2name">Verbraucher 2</span>: <span id="verbraucher2leistung">lade Daten</span></span><span class="verySmallTextSize" id="verbraucher2dailyyield"></span>
 			</div>
 		</div>
 
