--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -184,7 +184,8 @@
 									<a class="dropdown-item" href="#" onclick="switchDisplay()"><span
 										class="fa fa-chart-area px-0"></span> Fixe Bögen an/aus</a>
 									<a class="dropdown-item hide" id="meterResetButton" href="#" onclick="resetButtonClicked()"><span
-										class="fa fa-undo"></span> Bögen reset</a>									
+										class="fa fa-undo"></span> Bögen reset</a>
+									<a class="dropdown-item" href="#" onclick="switchDecimalPlaces()"><span class="fa fa-sliders-h px-0"></span> Dezimalstellen kW & kWh ändern</a>
 								</div>
 							</div>
 							
