colors: individual setting: count of decimal (#1534)
* individual setting: count of decimal

Theme colors: Adding individual setting: Change count of decimal places kW and kWh

* individual setting: count of decimal

Theme colors: Adding individual setting: Change count of decimal places kW and kWh

Co-authored-by: benderl <benderl@users.noreply.github.com>

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -185,6 +185,8 @@
 										class="fa fa-chart-area px-0"></span> Fixe Bögen an/aus</a>
 									<a class="dropdown-item hide" id="meterResetButton" href="#" onclick="resetButtonClicked()"><span
 										class="fa fa-undo"></span> Bögen reset</a>
+									<a class="dropdown-item" href="#" onclick="switchDecimalPlaces()"><span
+                    class="fa fa-sliders-h px-0"></span> Dezimalstellen kW & kWh ändern</a>
 								</div>
 							</div>
 
