optimize look and feel

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -80,7 +80,7 @@
                         <div class="col-4 py-2 px-1">
                             <button class="btn btn-block btn-outline-secondary display-button" id="timeSelectButton"
                                 type="button">
-                                <span><i class="fas fa-chart-line"></i>&nbsp;&nbsp; Graph</span>
+                                <span><i class="fas fa-chart-area"></i>&nbsp;&nbsp; Graph</span>
                             </button>
                         </div>
                         <div class="col-4 py-2 px-0">
