modify display colors

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="row">
                         <div class="col wb-widget">
-                            <figure id="powermeter" class="wb-subwidget mb-0"></figure>
+                            <figure id="powermeter" class=" mb-0"></figure>
                             <figure id="energymeter" class="wb-subwidget mb-0 hide"></figure>
                             <figure id="powergraph" class="wb-subwidget mb-0 hide"></figure>
                         </div>
