update modal colors

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -204,9 +204,9 @@
     <!-- Status -->
     <div class="modal" id="statusModal">
         <div class="modal-dialog">
-            <div class="modal-content border-primary">
+            <div class="modal-content">
                 <!-- modal header -->
-                <div class="modal-header bg-primary">
+                <div class="modal-header ">
                     <div class="col-1">&nbsp;</div>
                     <div class="col justify-content-center">
                         <div class="modal-title text-light text-center">Status</div>
@@ -219,7 +219,7 @@
                 <!-- modal body -->
                 <div class="modal-body">
                     <div id="status" class="status">
-                        <div class="row">
+                        <div class="row px-2">
                             <div class="col-xs-12 card">
                                 <div class="card-header bg-secondary">
                                     Systeminformationen
@@ -278,7 +278,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row px-2">
                             <div class="col-xs-12 card">
                                 <div class="card-header bg-secondary">
                                     Verbindung zum Backend
@@ -313,6 +313,13 @@
 
 
                     </div>
+                    <div class="row">
+
+                        <div class="col pt-4 px-3">
+                           <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
+                                   class="fas fa-check">&nbsp;&nbsp; OK</i></button>
+                       </div>
+                       </div>
                 </div>
             </div>
         </div>
@@ -351,9 +358,9 @@
     <!-- modal chargepoint-config-window -->
     <div class="modal" id="ladepunktConfigModal">
         <div class="modal-dialog">
-            <div class="modal-content border-promary">
+            <div class="modal-content">
                 <!-- modal header -->
-                <div class="modal-header bg-primary">
+                <div class="modal-header">
                     <div class="col-1">&nbsp;</div>
                     <div class="col justify-content-center">
                         <div class="modal-title text-light text-center">Einstellungen Ladepunkt <span
@@ -1135,6 +1142,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+
+                        <div class="col pt-4 px-3">
+                           <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
+                                   class="fas fa-check">&nbsp;&nbsp; OK</i></button>
+                       </div>
+                       </div>
                 </div> <!-- /modal body -->
             </div>
         </div>
@@ -1353,7 +1367,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <!-- modal header -->
-                <div class="bg-success modal-header">
+                <div class="modal-header">
                     <div class="col-1">&nbsp;</div>
                     <div class="col justify-content-center">
                         <div class="modal-title text-light text-center">Lademodus-Auswahl</div>
@@ -1433,7 +1447,7 @@
 
                      <div class="col pt-4 px-3">
                         <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
-                                class="fas fa-times"> OK</i></button>
+                                class="fas fa-check">&nbsp;&nbsp; OK</i></button>
                     </div>
                     </div>
                 
