--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -55,10 +55,19 @@
             <div class="col-4">
                 <div class="container-fluid px-2">
                     <div class="row px-0">
-                        <div class="col-7 px-0">
-                            <h4 id="date" class="col text-center text-light pt-3">Do, 19.11.2020</h4>
+                        <div class="col-2 py-2 px-0" id="displaylock">
+                            <button class="btn btn-block btn-outline-secondary display-button " id="lockButton"
+                                type="button">
+                            <i class="fas fa-lock text-danger h4"></i>
+                            <i class="fas fa-unlock text-success h4 hide"></i>
+                            </button>
+                        </div>
+
+                        <div class="col-5 px-0">
+                            <h4 id="date" class="col text-center text-light pt-3">19.11.2020</h4>
                             <h4 id="time" class="col text-center text-light">12:36</h4>
                         </div>
+                        
                         <div class="col-5 py-2 px-0">
                             <button class="btn btn-block btn-outline-secondary display-button " id="statusButton"
                                 type="button">
@@ -74,7 +83,7 @@
                         <div class="col-4 py-2 px-0">
                             <button class="btn btn-block btn-secondary display-button" id="powerSelectButton"
                                 type="button">
-                                <span><i class="fas fa-circle-notch"></i>&nbsp;&nbsp; Jetzt</span>
+                                <span><i class="fas fa-bolt"></i>&nbsp;&nbsp; Aktuell</span>
                             </button>
                         </div>
                         <div class="col-4 py-2 px-1">
@@ -1505,7 +1514,7 @@
                 <div class="modal-body">
                     <h4 class="text-light text-center">
                         Das Display ist mit einem PIN-Code gesperrt.<br>
-                        Bitte tippen Sie links oben auf das <i class="fas fa-lock text-success"></i> und geben den
+                        Bitte tippen Sie links unten auf das <i class="fas fa-lock text-danger"></i> und geben den
                         richtigen PIN ein.
                     </h4>
                 </div>
