--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -28,21 +28,24 @@
 <body>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class=" col-4 p-2">
+        <div class="row pt-2 pb-0">
+            <div class=" col-4">
                 <h3 class="mt-0">Ladepunkte</h3>
+        </div>
+        <div class="col-8 pl-5 pr-0">
+            <h3 id="widgetheading">Aktuelle Leistung</h3>
+        </div>
+        </div>
+        <div class="row pb-2">
+            <div class=" col-4 pl-2 pr-0">
                 <div id="chargePointTable"></div>
             </div>
             <!-- Aktuelle Leistung (powermeter) -->
-            <div class="col-8 p-2">
+            <div class="col-8 pl-5 pr-0">
                 <div class="container-fluid">
+                    
                     <div class="row">
-                        <div class="col px-0">
-                            <h3 id="widgetheading">Aktuelle Leistung</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col wb-widget">
+                        <div class="col wb-widget px-0">
                             <figure id="powermeter" class=" mb-0"></figure>
                             <figure id="energymeter" class="wb-subwidget mb-0 hide"></figure>
                             <figure id="powergraph" class="wb-subwidget mb-0 hide"></figure>
@@ -51,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row p-0 m-0">
             <div class="col-4">
                 <div class="container-fluid px-2">
                     <div class="row px-0">
@@ -77,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 pl-5 pr-0">
                 <div class="container-fluid px-2">
                     <div class="row px-0">
                         <div class="col-4 py-2 px-0">
