--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -330,7 +330,7 @@
 
                         <div class="col pt-4 px-3">
                             <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
-                                    class="fas fa-check">&nbsp;&nbsp; OK</i></button>
+                                    class="fas fa-check"></i>&nbsp;&nbsp; OK</button>
                         </div>
                     </div>
                 </div>
@@ -1159,7 +1159,7 @@
 
                         <div class="col pt-4 px-3">
                             <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
-                                    class="fas fa-check">&nbsp;&nbsp; OK</i></button>
+                                    class="fas fa-check"></i>&nbsp;&nbsp; OK</button>
                         </div>
                     </div>
                 </div> <!-- /modal body -->
@@ -1460,7 +1460,7 @@
 
                         <div class="col pt-4 px-3">
                             <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
-                                    class="fas fa-check">&nbsp;&nbsp; OK</i></button>
+                                    class="fas fa-check"></i>&nbsp;&nbsp; OK</button>
                         </div>
                     </div>
 
