--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -33,8 +33,11 @@
             <div class=" col-4 pl-2 pr-0">
                 <div id="chargePointTable"></div>
             </div>
+            <div class="col-2">
+                <p style="text-align:center;">Work in progress!</p>
+            </div>
             <!-- Aktuelle Leistung (powermeter) -->
-            <div class="col-8 pl-5 pr-0">
+            <div class="col-6 pl-6 pr-0">
                 <div class="container-fluid">
 
                     <div class="row">
@@ -51,7 +54,8 @@
             <div class=" col-4">
                 <h3 class="mt-0"></h3>
             </div>
-            <div class="col-8 pl-5 pr-0">
+            <div class="col-2"></div>
+            <div class="col-6 pl-6 pr-0">
                 <h3 id="widgetheading">&nbsp;</h3>
             </div>
         </div>
@@ -81,7 +85,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-8 pl-5 pr-4">
+            <div class="col-2">
+                <p id="screensize"></p>
+                </div>
+            <div class="col-6 pl-6 pr-4">
                 <div class="container-fluid px-2">
                     <div class="row px-0">
                         <div class="col-4 py-2 px-0">
