--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome-5.8.2/css/all.css">
     <!-- important scripts to be loaded -->
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="display/cards/jquery.sparkline.js"></script>
     <script src="js/bootstrap-4.4.1/bootstrap.bundle.min.js"></script>
     <!-- display style -->
     <link rel="stylesheet" type="text/css" href="display/colors/style.css">
@@ -184,7 +183,7 @@
 
 
     <!-- Code -->
-    <div id="code" class="code resume">
+ <!--    <div id="code" class="code resume">
         <div id="PINcode" class="text-center">
             <input id="PINbox" type="text" value="" name="PINbox" disabled="disabled">
             <br>
@@ -220,7 +219,7 @@
             };
         </script>
     </div>
-
+ -->
     <!-- Status -->
     <div class="modal" id="statusModal">
         <div class="modal-dialog">
@@ -1217,7 +1216,7 @@
                             onclick="clearLockForm(this);">
                         <input type="button" class="PINbutton" name="0" value="0" onclick="addLockNumber(this);">
                         <input type="button" class="PINbutton enter" name="+" value="enter"
-                            onclick="submitLockForm(PINbox);">
+                            onclick="submitLockForm(Lockbox);">
                     </div>
                 </div> <!-- /modal body -->
             </div>
@@ -1234,7 +1233,7 @@
 
             function submitLockForm(e) {
                 $.get(
-                    { url: "display/cards/checklock.php?pin=" + $('#Lockbox').val(), cache: false },
+                    { url: "display/colors/checklock.php?pin=" + $('#Lockbox').val(), cache: false },
                     function (data) {
                         if (data == 1) {
                             lockDisplay(false);
@@ -1559,10 +1558,10 @@
                 displaylocked = true;
                 $('#displaylock').find('.fa-lock').removeClass('hide');
                 $('#displaylock').find('.fa-unlock').addClass('hide');
-                if ($('.sidenav').find('.btn.active').hasClass('displayLock')) {
+               /*  if ($('.sidenav').find('.btn.active').hasClass('displayLock')) {
                     // console.log('changing panel');
                     initPanels();
-                }
+                } */
                 window.clearTimeout(lockTimeoutHandler);
                 lockTimeoutHandler = null;
             }
@@ -1570,7 +1569,7 @@
 
         window.setInterval(function () {
             $.get(
-                { url: "display/cards/checklock.php?lock=1", cache: false },
+                { url: "display/colors/checklock.php?lock=1", cache: false },
                 function (data) {
                     if (data == "1") {
                         displaypinaktiv = 1;
@@ -1617,12 +1616,12 @@
 
         function initPanels() {
             $('.resume').addClass('hide');
-            $('.sidenav').find('.btn').removeClass('active');
+          /*   $('.sidenav').find('.btn').removeClass('active');
             var firstButton = $('.sidenav').find('.btn').not('.hide').not('.displayLock').first();
             var firstNavTarget = $(firstButton).attr('href');
             $(firstButton).addClass('active');
             $(firstNavTarget).removeClass('hide');
-        }
+         */}
 
         $(document).ready(function () {
 
@@ -1652,7 +1651,7 @@
             // handling of display panels
             initPanels();
 
-            $('.sidenav').find('a[href^="#"]').on("click", function (event) {
+         /*    $('.sidenav').find('a[href^="#"]').on("click", function (event) {
                 if ($(this).hasClass('displayLock') && displaylocked == true) {
                     $("#lockInfoModal").modal("show");
                 } else {
@@ -1667,10 +1666,10 @@
                     // activate clicked menu element
                     $(this).addClass('active');
                     // update sparklines
-                    $.sparkline_display_visible();
+                   // $.sparkline_display_visible();
                 }
             });
-
+ */
             $('#lastmanagementShowBtn').on("click", function (event) {
                 $("#lastregelungModal").modal("show");
             });
