clean browser cache at reboot

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -34,6 +34,7 @@
             </div>
             <div class="col-2">
                 <p style="text-align:center;">Work in progress!</p>
+                <p id="useragent"></p>
             </div>
             <!-- Aktuelle Leistung (powermeter) -->
             <div class="col-6 pl-6 pr-0">
@@ -53,7 +54,9 @@
             <div class=" col-4">
                 <h3 class="mt-0"></h3>
             </div>
-            <div class="col-2"></div>
+            <div class="col-2">
+                
+            </div>
             <div class="col-6 pl-6 pr-0">
                 <h3 id="widgetheading">&nbsp;</h3>
             </div>
