--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -61,7 +61,7 @@
                 <div class="container-fluid">
 
                     <div class="row">
-                        <div class="col wb-widget px-0">
+                        <div class="col wb-widget p-3">
                             <figure id="powermeter" class=" mb-0"></figure>
                             <figure id="energymeter" class="wb-subwidget mb-0 hide"></figure>
                             <figure id="powergraph" class="wb-subwidget mb-0 hide"></figure>
