Fix: colors theme for internal display (#1636)
* cleanup code

* clean browser cache at reboot

* optimize layout

* optimize layout

* optimize layout

* optimize layout

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome-5.8.2/css/all.css">
     <!-- important scripts to be loaded -->
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="display/cards/jquery.sparkline.js"></script>
     <script src="js/bootstrap-4.4.1/bootstrap.bundle.min.js"></script>
     <!-- display style -->
     <link rel="stylesheet" type="text/css" href="display/colors/style.css">
@@ -28,20 +27,41 @@
 <body>
 
     <div class="container-fluid">
+        <div class="row pt-3">
 
-        <div class="row pt-2">
-            <div class=" col-4 pl-2 pr-0">
-                <div id="chargePointTable"></div>
+            <!-- Linke Spalte (Buttons)-->
+            <div class="col-2 px-1">
+                <h4 id="date" class="col text-center text-light pt-3">19.11.2020</h4>
+                <h4 id="time" class="col text-center text-light pb-5">12:36</h4>
+                <button class="btn btn-block btn-secondary display-button" id="powerSelectButton" type="button">
+                    <span><i class="fas fa-bolt"></i>&nbsp;&nbsp; Aktuell</span>
+                </button>
+                <button class="btn btn-block btn-outline-secondary display-button" id="timeSelectButton" type="button">
+                    <span><i class="fas fa-chart-area"></i>&nbsp;&nbsp; Graph</span>
+                </button>
+                <button class="btn btn-block btn-outline-secondary display-button mb-4" id="energySelectButton"
+                    type="button">
+                    <span><i class="fas fa-chart-bar"></i>&nbsp;&nbsp; Heute</span>
+                </button>
+                <p id="screensize"></p>
+                <p id="useragent"></p>
+                <button class="btn btn-block btn-outline-secondary display-button " id="statusButton" type="button">
+                    <span><i class="fas fa-info-circle"></i>&nbsp;&nbsp; Status</span>
+                </button>
+                <div id="displaylock">
+                    <button class="btn btn-block btn-outline-secondary display-button " id="lockButton" type="button">
+                        <i class="fas fa-lock text-danger "></i>
+                        <i class="fas fa-unlock text-success hide"></i>
+                    </button>
+                </div>
             </div>
-            <div class="col-2">
-                <p style="text-align:center;">Work in progress!</p>
-            </div>
-            <!-- Aktuelle Leistung (powermeter) -->
-            <div class="col-6 pl-6 pr-0">
+
+            <!-- Mittlere Spalte (Widgets) -->
+            <div class="col-7 p-0">
                 <div class="container-fluid">
 
                     <div class="row">
-                        <div class="col wb-widget px-0">
+                        <div class="col wb-widget p-3">
                             <figure id="powermeter" class=" mb-0"></figure>
                             <figure id="energymeter" class="wb-subwidget mb-0 hide"></figure>
                             <figure id="powergraph" class="wb-subwidget mb-0 hide"></figure>
@@ -49,71 +69,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row pt-0 pb-0">
-            <div class=" col-4">
-                <h3 class="mt-0"></h3>
-            </div>
-            <div class="col-2"></div>
-            <div class="col-6 pl-6 pr-0">
-                <h3 id="widgetheading">&nbsp;</h3>
-            </div>
-        </div>
-        <div class="row pt-0 pb-0">
-            <div class="col-4">
-                <div class="container-fluid px-2">
-                    <div class="row px-0">
-                        <div class="col-2 py-2 px-0" id="displaylock">
-                            <button class="btn btn-block btn-outline-secondary display-button " id="lockButton"
-                                type="button">
-                                <i class="fas fa-lock text-danger h4"></i>
-                                <i class="fas fa-unlock text-success h4 hide"></i>
-                            </button>
-                        </div>
 
-                        <div class="col-5 px-0">
-                            <h4 id="date" class="col text-center text-light pt-3">19.11.2020</h4>
-                            <h4 id="time" class="col text-center text-light">12:36</h4>
-                        </div>
-
-                        <div class="col-5 py-2 px-0">
-                            <button class="btn btn-block btn-outline-secondary display-button " id="statusButton"
-                                type="button">
-                                <span><i class="fas fa-info-circle"></i>&nbsp;&nbsp; Status</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-2">
-                <p id="screensize"></p>
-            </div>
-            <div class="col-6 pl-6 pr-4">
-                <div class="container-fluid px-2">
-                    <div class="row px-0">
-                        <div class="col-4 py-2 px-0">
-                            <button class="btn btn-block btn-secondary display-button" id="powerSelectButton"
-                                type="button">
-                                <span><i class="fas fa-bolt"></i>&nbsp;&nbsp; Aktuell</span>
-                            </button>
-                        </div>
-                        <div class="col-4 py-2 px-1">
-                            <button class="btn btn-block btn-outline-secondary display-button" id="timeSelectButton"
-                                type="button">
-                                <span><i class="fas fa-chart-area"></i>&nbsp;&nbsp; Graph</span>
-                            </button>
-                        </div>
-                        <div class="col-4 py-2 px-0">
-                            <button class="btn btn-block btn-outline-secondary display-button" id="energySelectButton"
-                                type="button">
-                                <span><i class="fas fa-chart-bar"></i>&nbsp;&nbsp; Heute</span>
-
-                            </button>
-                        </div>
-                    </div>
-
-                </div>
-
+            <!-- Rechte Spalte (Ladepunkte)-->
+            <div class=" col-3 px-1">
+                <div id="chargePointTable"></div>
             </div>
         </div>
     </div>
@@ -184,7 +143,7 @@
 
 
     <!-- Code -->
-    <div id="code" class="code resume">
+    <!--    <div id="code" class="code resume">
         <div id="PINcode" class="text-center">
             <input id="PINbox" type="text" value="" name="PINbox" disabled="disabled">
             <br>
@@ -220,7 +179,7 @@
             };
         </script>
     </div>
-
+ -->
     <!-- Status -->
     <div class="modal" id="statusModal">
         <div class="modal-dialog">
@@ -1217,7 +1176,7 @@
                             onclick="clearLockForm(this);">
                         <input type="button" class="PINbutton" name="0" value="0" onclick="addLockNumber(this);">
                         <input type="button" class="PINbutton enter" name="+" value="enter"
-                            onclick="submitLockForm(PINbox);">
+                            onclick="submitLockForm(Lockbox);">
                     </div>
                 </div> <!-- /modal body -->
             </div>
@@ -1234,7 +1193,7 @@
 
             function submitLockForm(e) {
                 $.get(
-                    { url: "display/cards/checklock.php?pin=" + $('#Lockbox').val(), cache: false },
+                    { url: "display/colors/checklock.php?pin=" + $('#Lockbox').val(), cache: false },
                     function (data) {
                         if (data == 1) {
                             lockDisplay(false);
@@ -1559,10 +1518,10 @@
                 displaylocked = true;
                 $('#displaylock').find('.fa-lock').removeClass('hide');
                 $('#displaylock').find('.fa-unlock').addClass('hide');
-                if ($('.sidenav').find('.btn.active').hasClass('displayLock')) {
-                    // console.log('changing panel');
-                    initPanels();
-                }
+                /*  if ($('.sidenav').find('.btn.active').hasClass('displayLock')) {
+                     // console.log('changing panel');
+                     initPanels();
+                 } */
                 window.clearTimeout(lockTimeoutHandler);
                 lockTimeoutHandler = null;
             }
@@ -1570,7 +1529,7 @@
 
         window.setInterval(function () {
             $.get(
-                { url: "display/cards/checklock.php?lock=1", cache: false },
+                { url: "display/colors/checklock.php?lock=1", cache: false },
                 function (data) {
                     if (data == "1") {
                         displaypinaktiv = 1;
@@ -1617,12 +1576,12 @@
 
         function initPanels() {
             $('.resume').addClass('hide');
-            $('.sidenav').find('.btn').removeClass('active');
+          /*   $('.sidenav').find('.btn').removeClass('active');
             var firstButton = $('.sidenav').find('.btn').not('.hide').not('.displayLock').first();
             var firstNavTarget = $(firstButton).attr('href');
             $(firstButton).addClass('active');
             $(firstNavTarget).removeClass('hide');
-        }
+         */}
 
         $(document).ready(function () {
 
@@ -1652,25 +1611,25 @@
             // handling of display panels
             initPanels();
 
-            $('.sidenav').find('a[href^="#"]').on("click", function (event) {
-                if ($(this).hasClass('displayLock') && displaylocked == true) {
-                    $("#lockInfoModal").modal("show");
-                } else {
-                    // hide all panels
-                    $('.resume').addClass('hide');
-                    // get target panel
-                    var target = $(this).attr('href');
-                    // display target panel
-                    $('.resume' + target).removeClass('hide');
-                    // remove active menu element
-                    $('.sidenav').find('.active').removeClass('active');
-                    // activate clicked menu element
-                    $(this).addClass('active');
-                    // update sparklines
-                    $.sparkline_display_visible();
-                }
-            });
-
+            /*    $('.sidenav').find('a[href^="#"]').on("click", function (event) {
+                   if ($(this).hasClass('displayLock') && displaylocked == true) {
+                       $("#lockInfoModal").modal("show");
+                   } else {
+                       // hide all panels
+                       $('.resume').addClass('hide');
+                       // get target panel
+                       var target = $(this).attr('href');
+                       // display target panel
+                       $('.resume' + target).removeClass('hide');
+                       // remove active menu element
+                       $('.sidenav').find('.active').removeClass('active');
+                       // activate clicked menu element
+                       $(this).addClass('active');
+                       // update sparklines
+                      // $.sparkline_display_visible();
+                   }
+               });
+    */
             $('#lastmanagementShowBtn').on("click", function (event) {
                 $("#lastregelungModal").modal("show");
             });
