--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -32,24 +32,23 @@
             <!-- Linke Spalte (Buttons)-->
             <div class="col-2 px-1">
                 <h4 id="date" class="col text-center text-light pt-3">19.11.2020</h4>
-                <h4 id="time" class="col text-center text-light pb-5">12:36</h4>
-                <button class="btn btn-block btn-secondary display-button" id="powerSelectButton" type="button">
+                <h4 id="time" class="col text-center text-light pb-5 mb-3">12:36</h4>
+                <button class="btn btn-block btn-secondary display-button p-5" id="powerSelectButton" type="button">
                     <span><i class="fas fa-bolt"></i>&nbsp;&nbsp; Aktuell</span>
                 </button>
-                <button class="btn btn-block btn-outline-secondary display-button" id="timeSelectButton" type="button">
+                <button class="btn btn-block btn-outline-secondary display-button p-5" id="timeSelectButton" type="button">
                     <span><i class="fas fa-chart-area"></i>&nbsp;&nbsp; Graph</span>
                 </button>
-                <button class="btn btn-block btn-outline-secondary display-button mb-4" id="energySelectButton"
+                <button class="btn btn-block btn-outline-secondary display-button mb-4 p-5" id="energySelectButton"
                     type="button">
                     <span><i class="fas fa-chart-bar"></i>&nbsp;&nbsp; Heute</span>
                 </button>
-                <p id="screensize"></p>
-                <p id="useragent"></p>
-                <button class="btn btn-block btn-outline-secondary display-button " id="statusButton" type="button">
+                
+                <button class="btn btn-block btn-outline-secondary display-button mt-5 p-5" id="statusButton" type="button">
                     <span><i class="fas fa-info-circle"></i>&nbsp;&nbsp; Status</span>
                 </button>
-                <div id="displaylock">
-                    <button class="btn btn-block btn-outline-secondary display-button " id="lockButton" type="button">
+                <div id="displaylock" class="mt-1">
+                    <button class="btn btn-block btn-outline-secondary display-button p-5" id="lockButton" type="button">
                         <i class="fas fa-lock text-danger "></i>
                         <i class="fas fa-unlock text-success hide"></i>
                     </button>
