Variable font size and disable button added

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="row">
 
-                        <div class="col pt-4 px-3">
+                        <div class="col pt-0 px-3">
                             <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
                                     class="fas fa-check"></i>&nbsp;&nbsp; OK</button>
                         </div>
@@ -1270,6 +1270,9 @@
                             <button type="button"
                                 class="chargeModeBtn chargeModeBtnMinPV btn btn-lg btn-block btn-secondary"
                                 data-chargeMode="1">Min + PV</button>
+                        </div>
+                        <div class="col-sm-4 px-3 pb-3 pt-1" id="disableButton">
+
                         </div>
                         <div class="col-sm-4 px-3 pb-3 pt-1">
                             <button type="button"
