--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -83,8 +83,8 @@
                 <!-- modal header -->
                 <div class="modal-header ">
                     <div class="col-1">&nbsp;</div>
-                    <div class="col justify-content-center">
-                        <div class="modal-title text-light text-center">Status</div>
+                    <div class="col">
+                        <div class="status-title">Status</div>
                     </div>
                     <div class="col-1 pr-0">
                         <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal"><i
@@ -94,12 +94,12 @@
                 <!-- modal body -->
                 <div class="modal-body">
                     <div id="status" class="status">
-                        <div class="row px-2">
-                            <div class="col-xs-12 card">
-                                <div class="card-header bg-secondary">
+                        <div class="row px-0">
+                            <div class="col-12">
+                                <div class="status-header bg-secondary">
                                     Systeminformationen
                                 </div>
-                                <div class="card-body">
+                                <div class="">
                                     <div class="form-row">
                                         <div class="col-4">
                                             Version:
@@ -154,11 +154,11 @@
                             </div>
                         </div>
                         <div class="row px-2">
-                            <div class="col-xs-12 card">
-                                <div class="card-header bg-secondary">
+                            <div class="col-12">
+                                <div class="status-header bg-secondary">
                                     Verbindung zum Backend
                                 </div>
-                                <div id="backend" class="card-body">
+                                <div id="backend">
                                     <div class="form-row">
                                         <div class="col-4">
                                             Status:
@@ -177,7 +177,7 @@
                                     </div>
                                     <div class="form-row justify-content-end">
                                         <div class="col-8">
-                                            <button class="btn btn-block btn-danger reloadBtn" type="button">
+                                            <button class="btn btn-block btn-danger displayButton reloadBtn" type="button">
                                                 Display neu Laden
                                             </button>
                                         </div>
@@ -190,8 +190,8 @@
                     </div>
                     <div class="row">
 
-                        <div class="col pt-0 px-3">
-                            <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
+                        <div class="col pt-2 px-3">
+                            <button type="button" class="btn btn-info btn-block displayButton" data-dismiss="modal"><i
                                     class="fas fa-check"></i>&nbsp;&nbsp; OK</button>
                         </div>
                     </div>
@@ -1495,10 +1495,7 @@
                 document.body.appendChild(script);
             });
             wbdata.init();
-            powerMeter.init();
-            yieldMeter.init();
-            powerGraph.init();
-            chargePointList.init();
+           
             // handling of display panels
             initPanels();
 
