SoC Beschreibungstext auf Überschreiten angepasst

--- a/web/settings/pvconfig.html
+++ b/web/settings/pvconfig.html
@@ -332,7 +332,7 @@
 									</div>
 									<span class="form-text small">
 										Parameter in Prozent [%] für den Maximal-SoC am Ladepunkt 1 im Modus PV-Laden.
-										Definiert einen EV-Maximal-SoC, bis zu dem höchstens geladen wird. Diese Funktion ist nur dafür gedacht wenn mehree Ladepunkte aktiv sind. Setzen auf 100% deaktiviert sie.
+										Definiert einen EV-Maximal-SoC, bei dessen Überschreitung die Ladung gestoppt wird. Diese Funktion ist nur dafür gedacht wenn mehree Ladepunkte aktiv sind. Setzen auf 100% deaktiviert sie.
 									</span>
 								</div>
 							</div>
@@ -364,7 +364,7 @@
 									</div>
 									<span class="form-text small">
 										Parameter in Prozent [%] für den Maximal-SoC am Ladepunkt 2 im Modus PV-Laden.
-										Definiert einen EV-Maximal-SoC, bis zu dem höchstens geladen wird. Diese Funktion ist nur dafür gedacht wenn mehree Ladepunkte aktiv sind. Setzen auf 100% deaktiviert sie.
+										Definiert einen EV-Maximal-SoC, bei dessen Überschreitung die Ladung gestoppt wird. Diese Funktion ist nur dafür gedacht wenn mehree Ladepunkte aktiv sind. Setzen auf 100% deaktiviert sie.
 									</span>
 								</div>
 							</div>
