--- a/web/settings/pvconfig.html
+++ b/web/settings/pvconfig.html
@@ -293,7 +293,7 @@
 											<input type="range" class="form-control-range rangeInput" id="maxSocToChargeToLp1" name="maxSocToChargeTo" min="50" max="100" step="5" value="100" data-default="100" data-topicprefix="openWB/config/get/pv/" data-topicsubgroup="lp/1/">
 										</div>
 									</div>
-									<span class="form-text small">Parameter in Prozent [%] für den Maximal-SoC am LP1 im Modus PV-Laden. Definiert einen EV-Maximal-SoC, Definiert einen EV-Maximal-SoC, bei dessen Überschreitung die Ladung gestoppt wird.</span>
+									<span class="form-text small">Parameter in Prozent [%] für den Maximal-SoC am LP1 im Modus PV-Laden. Definiert einen EV-Maximal-SoC, bei dessen Überschreitung die Ladung gestoppt wird.</span>
 								</div>
 							</div>
 						</div>
