adjust size of config modal

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -250,10 +250,7 @@
                         <div class="modal-title text-light text-center">Einstellungen Ladepunkt <span
                                 class="configLp"></span></div>
                     </div>
-                    <div class="col-1 pr-0">
-                        <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal"><i
-                                class="fas fa-times"></i></button>
-                    </div>
+                   
                 </div>
                 <!-- modal body -->
                 <div class="modal-body">
@@ -332,7 +329,7 @@
                                             data-topicprefix="openWB/config/get/sofort/">
                                     </div>
                                     <div class="col-12 d-flex justify-content-end">
-                                        <input class="btn btn-warning btn-lg modalLabel resetEnergyToCharge"
+                                        <input class="btn btn-warning btn-lg modal-button resetEnergyToCharge"
                                             type="button" id="lp/1/resetEnergyToCharge"
                                             value="Energiemenge zurücksetzen"
                                             data-topicprefix="openWB/config/get/sofort/">
@@ -393,8 +390,8 @@
                     </div>
                     <div class="row">
 
-                        <div class="col pt-4 px-3">
-                            <button type="button" class="btn btn-info btn-block btn-lg" data-dismiss="modal"><i
+                        <div class="col pt-1 px-3">
+                            <button type="button" class="btn btn-info btn-block btn-lg modal-button" data-dismiss="modal"><i
                                     class="fas fa-check"></i>&nbsp;&nbsp; OK</button>
                         </div>
                     </div>
