--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -815,7 +815,7 @@
 	<!-- some scripts -->
 	<script>
 
-		// load navbar, be carefull: it loads asynchonously
+		// load navbar, be careful: it loads asynchronous
 		$.get(
 			{ url: "themes/navbar.html", cache: false },
 			function (data) {
@@ -852,8 +852,8 @@
 				countTopicsReceived = countTopicsReceived - countTopicsNotForPreloader;
 				var countTopicsToBeReceived = topicsToSubscribe.length - countTopicsNotForPreloader;
 				var percentageReceived = (countTopicsReceived / countTopicsToBeReceived * 100).toFixed(0);
-				var timeBetweenTwoMesagges = Date.now() - timeOfLastMqttMessage;
-				if (timeBetweenTwoMesagges > 3000) {
+				var timeBetweenTwoMessages = Date.now() - timeOfLastMqttMessage;
+				if (timeBetweenTwoMessages > 3000) {
 					// latest after 3 sec without new messages
 					percentageReceived = 100;
 					// debug output
@@ -878,7 +878,7 @@
 		}
 
 		var delayUserInput = (function () {
-			// sets a timeout on call and resets timout if called again for same id before timeout fires
+			// sets a timeout on call and resets timeout if called again for same id before timeout fires
 			var timeoutHandles = {};
 			return function (id, callback, ms) {
 				if (timeoutHandles[id]) {
@@ -1078,7 +1078,7 @@
 				var label = $('label[for="' + elementId + '"].valueLabel');
 				label.addClass('text-danger');
 				if ($.escapeSelector(elementId) == 'MaxPriceForCharging') {
-					// marks times in the pricechart where the price is low enough so charging would be allowed
+					// marks times in the price chart where the price is low enough so charging would be allowed
 					var priceAnnotations = createPriceAnnotations();
 					electricityPricechart.options.annotation.annotations = priceAnnotations;
 					electricityPricechart.update();
@@ -1092,7 +1092,7 @@
 					publish(value, topic);
 					var label = $('label[for="' + id + '"].valueLabel');
 					label.removeClass('text-danger');
-					// if rangeInput is for chargeLimitation, recalc progress
+					// if rangeInput is for chargeLimitation, recalculate progress
 					if (id.includes('/energyToCharge')) {
 						var parent = elem.closest('.chargeLimitation')  // get parent div element for charge limitation
 						var element = parent.find('.progress-bar');  // now get parents progressbar
@@ -1121,7 +1121,7 @@
 			}
 			window.document.addEventListener(visibilityChange, () => {
 				if (!document[hidden]) {
-					// once page is unhidden... reload graph completety
+					// once page is unhidden... reload graph completely
 					if (wbdata.graphMode == 'live') {
 						powerGraph.deactivateDay();
 							powerGraph.activateLive();
